--- a/index.html
+++ b/index.html
@@ -5,33 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+<!-- fonts -->
+
 </head>
 <body>
+  <div class="card">
 
-  Order Summary
+    <img class="card__image" src="images/illustration-hero.svg" alt="illustration">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    <div class="card__text">
 
-  Annual Plan
-  $59.99/year
+      <div class="card__title">
+        <h1 class="title">Order Summary</h1>
+      </div>
 
-  Change
+      <p class="card__description">
+        You can now listen to millions of songs, audiobooks, and podcasts on any 
+    device anywhere you like!
+      </p>
+    
+      <div class="card__plan">
+        <img class="plan__logo" src="images/icon-music.svg" alt="music icon"/>
 
-  Proceed to Payment
-  Cancel Order
+        <div class="plan__type">
+          <p class="annual">Annual Plan</p>
+          <p class="price">$59.99/year</p>
+        </div>
+
+        <a class ="plan__change" href="#">Change</a>
+      </div>
+
+      <div class="card__proceed">
+        <a class="proceed" href="#">Proceed to Payment</a>
+      </div>
+      
+      <div class="card__cancel">
+        <a class="cancel" href="#">Cancel Order</a>
+      </div>
+
+    </div>
+
+  </div>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/NicoPom">Nico Pom</a>.
   </div>
 </body>
 </html>
